@@ -8,6 +8,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 2.11.8.0 (not yet released)
 - patch #1987593 [interface] Table list pagination in navi, 
   thanks to Jason Day - jday29
+- bug #1989081 [profiling] Profiling causes query to be executed again
+  (really causes a problem in case of INSERT/UPDATE)
 
 2.11.7.0 (not yet released)
 - bug #1908719 [interface] New field cannot be auto-increment and primary key 
